Changed so this doesn't hurt page ranks

--- a/IeSupport/view/frontend/templates/popup.phtml
+++ b/IeSupport/view/frontend/templates/popup.phtml
@@ -3,7 +3,7 @@
 // $myBaseUrl = $this->getUrl('', ['_current' => true, '_use_rewrite' => true]);
 ?>
 <div id="ieAlert" style="display:none;">
-    <h1> We're sorry but the browser you are using is not currently supported. This site works best with Google Chrome, Mozilla Firefox, Apple Safari or Microsoft Edge browsers. </h1>
+    <span style="font-size:2.5em;"> We're sorry but the browser you are using is not currently supported. This site works best with Google Chrome, Mozilla Firefox, Apple Safari or Microsoft Edge browsers. </span>
 </div>
 <script>
     require(
